# openeeg

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.json
docs/: pep541-openeeg-takeover.md  pep541-outreach-emails.md
openeeg/: __init__.py  cohort.py  correct.py  features.py  metrics.py  openbsr.py  openibis.py  piecewise.py  postprocess.py  predict.py  rules.py
openeeg/models/: piecewise_raw_data.json  predict_bis_v3.txt
scripts/: 01_validate_1vital.py  02_cohort_benchmark.py  03_bias_analysis.py  04_emg_correction_analysis.py  05_features_eval.py  06_extract_features.py  07_train_lightgbm.py  08_rule_analysis.py  09_augment_oracle.py  10_hybrid_rule_lgbm.py  11_worst_case_plots.py  12_estimate_smoothing.py  13_desmooth_demo.py  14_train_desmoothed.py  15_compare_desmoothed.py  16_augment_phase3f.py  17_train_phase3f.py  18_oracle_W_cache.py  19_train_oracle_desmooth.py  20_train_w15_filtered.py  21_augment_openbsr.py  22_plot_bsr_detectors.py  23_compare_eeg1_eeg2.py  24_subparam_rule_80.py  25_bsr_bis_envelope.py  26_subparam_boundary.py  27_lee2019_reproduction.py  28_subparam_coef_mining.py  29_data_driven_tree.py  30_per_region_linear.py  31_residual_analysis.py  32_cnn_residual_estimate.py  33_verify_piecewise.py  34_v2_feature_ablation.py  35_train_predict_bis_v3.py  36_eval_rules.py  37_function_performance.py  38_shrink_grid_search.py  39_retrain_shrunk.py
tests/: test_piecewise_smoke.py  test_rules_smoke.py  test_smoke.py
