[project]
name = "openeeg"
version = "0.0.1"
description = "Open-source EEG processing: BIS reproduction, burst suppression, and related depth-of-anesthesia metrics"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Hyung-Chul Lee", email = "vital@snu.ac.kr" },
]
keywords = [
    "eeg",
    "electroencephalogram",
    "bis",
    "bispectral-index",
    "burst-suppression",
    "depth-of-anesthesia",
    "biomedical",
    "vitaldb",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
vitaldb = ["vitaldb>=1.4"]
plot = ["matplotlib>=3.7"]
dev = ["pytest>=7.4", "build>=1.2", "twine>=5.1"]

[project.urls]
Homepage = "https://github.com/vitaldb/openeeg"
Repository = "https://github.com/vitaldb/openeeg"
Issues = "https://github.com/vitaldb/openeeg/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openeeg"]

[tool.hatch.build.targets.sdist]
include = [
    "openeeg/**",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
